@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.031.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.032.
 use strict;
 use warnings;
 
@@ -35,7 +35,7 @@ my %WriteMakefileArgs = (
     "Tie::RefHash" => 0,
     "URI::URL" => 0,
     "URI::file" => 0,
-    "base" => 0,
+    "parent" => 0,
     "strict" => 0,
     "warnings" => 0
   },
@@ -100,9 +100,9 @@ my %FallbackPrereqs = (
   "URI::Escape" => 0,
   "URI::URL" => 0,
   "URI::file" => 0,
-  "base" => 0,
   "bytes" => 0,
   "lib" => 0,
+  "parent" => 0,
   "strict" => 0,
   "warnings" => 0
 );
