@@ -1,4 +1,4 @@
-# This file is generated by Dist::Zilla::Plugin::CPANFile v6.031
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.032
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
 requires "Carp" => "0";
@@ -16,7 +16,7 @@ requires "Scalar::Util" => "1.14";
 requires "Tie::RefHash" => "0";
 requires "URI::URL" => "0";
 requires "URI::file" => "0";
-requires "base" => "0";
+requires "parent" => "0";
 requires "perl" => "5.008";
 requires "strict" => "0";
 requires "warnings" => "0";
